...
        app:resize_mode="fill">

    </com.google.android.exoplayer2.ui.PlayerView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/video_place_holder"
        android:gravity="center"
        android:text="No Video"
        android:textColor="@color/colorTextIcon"
        android:visibility="gone"
        android:background="@android:color/black"
        android:textSize="20sp"/>
...
        android:elevation="6dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/steps_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
...
