<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/borders"
        android:elevation="6dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Recipe Ingredients"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ingredients_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="7dp"
        android:id="@+id/recipe_details_card_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>